// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyState > Snapshot Tests > matches snapshot for default empty state 1`] = `
<div>
  <div
    data-testid="card"
  >
    <div
      class="p-12 text-center"
      data-testid="cardcontent"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-inbox w-16 h-16 text-slate-500 mx-auto mb-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="22 12 16 12 14 15 10 15 8 12 2 12"
        />
        <path
          d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
        />
      </svg>
      <h3
        class="text-lg font-semibold text-white mb-2"
      >
        暂无数据
      </h3>
    </div>
  </div>
</div>
`;

exports[`EmptyState > Snapshot Tests > matches snapshot with all props 1`] = `
<div>
  <div
    class="my-4"
    data-testid="card"
  >
    <div
      class="p-12 text-center"
      data-testid="cardcontent"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-database w-16 h-16 text-slate-500 mx-auto mb-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <ellipse
          cx="12"
          cy="5"
          rx="9"
          ry="3"
        />
        <path
          d="M3 5V19A9 3 0 0 0 21 19V5"
        />
        <path
          d="M3 12A9 3 0 0 0 21 12"
        />
      </svg>
      <h3
        class="text-lg font-semibold text-white mb-2"
      >
        没有项目
      </h3>
      <p
        class="text-slate-400 mb-4"
      >
        开始创建您的第一个项目
      </p>
      <div
        class="mt-4"
      >
        <button>
          创建项目
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState > Snapshot Tests > matches snapshot with description only 1`] = `
<div>
  <div
    data-testid="card"
  >
    <div
      class="p-12 text-center"
      data-testid="cardcontent"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-inbox w-16 h-16 text-slate-500 mx-auto mb-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="22 12 16 12 14 15 10 15 8 12 2 12"
        />
        <path
          d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
        />
      </svg>
      <h3
        class="text-lg font-semibold text-white mb-2"
      >
        空列表
      </h3>
      <p
        class="text-slate-400 mb-4"
      >
        列表中还没有任何项目
      </p>
    </div>
  </div>
</div>
`;

exports[`ErrorMessage > Snapshot Tests > matches snapshot for basic error 1`] = `
<div>
  <div
    class="border-red-500/20 bg-red-500/5"
    data-testid="card"
  >
    <div
      class="p-6"
      data-testid="cardcontent"
    >
      <div
        class="flex items-start gap-4"
      >
        <svg
          class="w-6 h-6 text-red-400 flex-shrink-0 mt-0.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
        <div
          class="flex-1"
        >
          <h3
            class="text-lg font-semibold text-red-400 mb-2"
          >
            加载失败
          </h3>
          <p
            class="text-slate-300 mb-4"
          >
            测试错误信息
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorMessage > Snapshot Tests > matches snapshot with details 1`] = `
<div>
  <div
    class="border-red-500/20 bg-red-500/5"
    data-testid="card"
  >
    <div
      class="p-6"
      data-testid="cardcontent"
    >
      <div
        class="flex items-start gap-4"
      >
        <svg
          class="w-6 h-6 text-red-400 flex-shrink-0 mt-0.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
        <div
          class="flex-1"
        >
          <h3
            class="text-lg font-semibold text-red-400 mb-2"
          >
            加载失败
          </h3>
          <p
            class="text-slate-300 mb-4"
          >
            服务器错误
          </p>
          <details
            class="mb-4"
          >
            <summary
              class="text-sm text-slate-500 cursor-pointer mb-2"
            >
              详细信息
            </summary>
            <pre
              class="text-xs text-slate-500 bg-slate-900 p-3 rounded overflow-auto"
            >
              {
  "detail": "内部错误",
  "code": 500
}
            </pre>
          </details>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorMessage > Snapshot Tests > matches snapshot with retry button 1`] = `
<div>
  <div
    class="border-red-500/20 bg-red-500/5"
    data-testid="card"
  >
    <div
      class="p-6"
      data-testid="cardcontent"
    >
      <div
        class="flex items-start gap-4"
      >
        <svg
          class="w-6 h-6 text-red-400 flex-shrink-0 mt-0.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
        <div
          class="flex-1"
        >
          <h3
            class="text-lg font-semibold text-red-400 mb-2"
          >
            加载失败
          </h3>
          <p
            class="text-slate-300 mb-4"
          >
            网络错误
          </p>
          <button
            class="gap-2"
            type="button"
          >
            <svg
              class="w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
            />
            重试
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
